--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,16 @@ body{
     background:pink;
     font-family:Arial, Helvetica, sans-serif;
 }
+    .assignment{
+        display: flex;
+        flex-wrap:wrap;
+    }
 
     .assignment{
-        display:flex;
+        width:22%;
         padding: 10px;
         margin: 10px;
+        padding: 20px;
         background:lightgoldenrodyellow;
         border: radius 5px; ;
     }
